--- a/elements/ClientConfig.mod.json
+++ b/elements/ClientConfig.mod.json
@@ -2,7 +2,81 @@
   "_fv": 66,
   "_type": "config",
   "definition": {
-    "pools": [],
+    "pools": [
+      {
+        "category": "HUD",
+        "entries": [
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "Enables the HUD that shows your money on the top left corner.",
+            "vardisplay": "Money HUD",
+            "varname": "mhud",
+            "enablecomment": true,
+            "stringlist": []
+          },
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "Shows the player on the top right corner.",
+            "vardisplay": "Player HUD",
+            "varname": "phud",
+            "enablecomment": true,
+            "stringlist": []
+          },
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "Shows your coordinates below the money. HUD.",
+            "vardisplay": "Coordinates HUD",
+            "varname": "corhud",
+            "enablecomment": true,
+            "stringlist": []
+          },
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "Completely disable or enable the Grimm's HUD.",
+            "vardisplay": "Show HUD",
+            "varname": "hud",
+            "enablecomment": false,
+            "stringlist": []
+          }
+        ]
+      }
+    ],
     "file": "grimmsmod_client",
     "configType": 2
   }
