--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
 loaderVersion="[2,)"
-license="GNU Lesser General Public License version 3 (LGPLv3)"
+license="MIT License"
 
 [[mods]]
 modId="grimms"
@@ -8,7 +8,7 @@ version="1"
 displayName="Grimm's Mod"
 displayURL="https://gsdistance.org"
 logoFile="logo.png"
-credits="Cheesecake"
+credits="tyuXX, no more :("
 authors="tyuXX"
 description="Grimm's newest and bestest Mod!"
 
