- Fix day counter config. - Add transfer money command. - Make Heavy blaster require coal dust. - Added refinery model.

--- a/elements/ServerConfig.mod.json
+++ b/elements/ServerConfig.mod.json
@@ -283,6 +283,23 @@
             "varname": "rottime",
             "enablecomment": true,
             "stringlist": []
+          },
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "",
+            "vardisplay": "Enable Invulnerability ticks",
+            "varname": "invul",
+            "enablecomment": false,
+            "stringlist": []
           }
         ]
       }
