- Change config dir from root to grimm - Add Alloyed ingot

--- a/elements/ClientConfig.mod.json
+++ b/elements/ClientConfig.mod.json
@@ -94,7 +94,7 @@
         ]
       }
     ],
-    "file": "grimmsmod_client",
+    "file": "grimm\\\\grimmsmod_client",
     "configType": 2
   }
 }
