--- a/elements/ServerConfig.mod.json
+++ b/elements/ServerConfig.mod.json
@@ -304,7 +304,7 @@
         ]
       }
     ],
-    "file": "grimmsmod_server",
+    "file": "grimm\\\\grimmsmod_server",
     "configType": 1
   }
 }
