- Add composite gem - Balance ore spawning a bit - Add Composite Galloy Ingot - Change tin can recipe from 1 tin can to 4 - Add KeepXP prestige upgrade - Fix the prestige upgrade menu's next button - Fix the death counter

--- a/elements/ClientConfig.mod.json
+++ b/elements/ClientConfig.mod.json
@@ -90,11 +90,28 @@
             "varname": "dayhud",
             "enablecomment": true,
             "stringlist": []
+          },
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "",
+            "vardisplay": "Main menu HUD",
+            "varname": "menuhud",
+            "enablecomment": false,
+            "stringlist": []
           }
         ]
       }
     ],
-    "file": "grimm\\\\grimmsmod_client",
+    "file": "grimm\\\\client",
     "configType": 2
   }
 }
